packages/typ/tests/fixtures/diagnostics/0359_labels_wrong_x_type_04.ml.expected
File "0359_labels_wrong_x_type_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0359_labels_wrong_x_type_04 is not a valid module name.

File "0359_labels_wrong_x_type_04.ml", line 2, characters 22-26:
2 | let _ = pick_delta ~x:true ~y:false
                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
